ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "cert-issuer"
spec:
  tls:
    - hosts:
      - resume.dineshpabbi.xyz
      secretName: resume-secret
  rules:
  - host: resume.dineshpabbi.xyz
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-service
                port:
                  number: 3000
